# QSDL

./: .gitignore  .gitlab-ci.yml  .versionrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dev.sh  pyproject.toml
docs/: README.md  basic-data-modeling.md  change-request-base-type-handling.md  cli.md  overview.md  relationships.md
docs/core/: directives.md  language.md  rules.md
docs/generators/: README.md  spring.md
docs/generators/i18n/: README.md
docs/generators/openapi/: README.md
docs/generators/plantuml/: README.md
docs/generators/postgres/: README.md
docs/generators/spring/: README.md
docs/generators/void/: README.md
docs/guides/: README.md  basic-data-modeling.md  relationships.md
docs/reference/: faq.md  glossary.md
docs/rules/: README.md  naming.md  validation.md
docs/spring/: README.md
examples/multifile/: multifile.qsdl
examples/multifile/lib/: multifile_import_b.qsdl
examples/openapi/: input.qsdl
examples/openapi/srcgen/: openapi.yaml
examples/other/: fileservice.qsdl  package_example.qsdl
examples/spring/: relation.qsdl
examples/spring/basic_layout/: .gitignore  .qsdl-ignore  README.md  dev.sh  docker-compose.yml  pom.xml
examples/spring/domain_layout/: .gitignore  pom.xml
examples/spring/srcgen/: .gitignore  .google-style.xml  Makefile  README.md  dev.sh  docker-compose.yml  pom.xml
qsdl/: __init__.py  __main__.py  config.py  core.py  domain.py  filter.py  logger.py  parse.py  render.py  uml.py  util.py
qsdl/definition/: entity.md  entity.tx
qsdl/dsl/: __init__.py  textx.py  util.py
qsdl/dsl/definition/: entity.md  entity.tx
qsdl/dsl/models/: __init__.py  api.py  argument.py  (+8 more)
qsdl/generators/: __init__.py  base_config.py  generic.py
qsdl/model/: __init__.py  color.py  operation.py  scalar.py
qsdl/models/: __init__.py  color.py  operation.py
qsdl/processors/: model.py  objects.py
qsdl/templates/: graphql.j2  graphql.macro.j2  openapi.j2  openapi.macro.j2  uml.j2
src/qsdl/: __init__.py  __main__.py  config.py  core.py  filter.py  logger.py  render.py
tests/: __init__.py  input.tx  testcases.py
tests/e2e/: __init__.py  base_e2e_test.py  test_base_and_object_same_structure.py  test_base_array_jsonb.py  test_base_flattening_with_constraints.py  test_basic_types.py  test_basic_types_as_list.py  test_complex_entity_graph.py  test_complex_mixed_base_object_arrays.py  test_deep_aggregation_chain.py  test_deep_composition_chain.py  test_deeply_nested_base_types.py  test_deeply_nested_base_with_opaque.py  test_default_flattening.py  test_enum_usage.py  test_mixed_base_and_object_fields.py  test_mixed_base_same_type.py  test_mixed_composition_aggregation.py  test_multiple_base_fields_same_type.py  test_nested_base_flattening.py  test_nested_object_relationships.py  test_object_arrays_with_directives.py  test_object_scalar_array.py  test_one_to_many.py  test_one_to_one.py  test_opaque_base_with_constraints.py  test_opaque_jsonb.py  test_opaque_nested_base.py  test_require_and_unique.py  test_two_parent_one_child.py
tests/functional/: __init__.py  test_api.py  test_api_field.py  test_api_operation.py  test_argument.py  test_arguments.py  test_base.py  test_base_field.py  test_description.py  test_descriptions.py  test_directive.py  test_enum.py  test_enums.py  test_interfaces.py  test_object.py  test_object_field.py  test_operation.py  test_operation_field.py  test_scalar.py  test_scalars.py  test_specifics.py  test_specifics_openapi.py  test_specifics_query.py  test_specifics_spring.py  test_type_overrides.py
tests/unit/: test_core.py  test_main.py
util/: basic_config.json  docker-compose.yml  domain_config.json
util/examples/: fileservice.qsdl  input.qsdl  input.tx  relation.qsdl  relation.tx  simple.tx
util/scripts/: licenser.sh  standard-version-pyproject.js
(+986 files in other folders)
