[project]
name = "QSDL"
version = "5.0.0"
description = "A Schema-Definition-Language Generator inspired by GraphQl."
readme = "README.md"
authors = [{ name = "henn1001", email = "henn1001@outlook.com" }]
license = "Apache-2.0"
requires-python = ">=3.13"

dependencies = [
  "dacite>=1.9.2",
  "flatten-json>=0.1.14",
  "inquirer>=3.4.1",
  "jinja2>=3.1.6",
  "pathspec>=0.12.1",
  "plantuml>=0.3.0",
  "pyfiglet>=1.0.3",
  "pyyaml>=6.0.2",
  "stringcase>=1.2.0",
  "textx>=4.2.2",
  "typer>=0.19.2",
]

[dependency-groups]
dev = [
  "openapi-spec-validator",
  "pytest",
  "pytest-cov",
  "pytest-html",
  "pytest-order",
  "ruff",
]

[project.scripts]
qsdl = "qsdl.__main__:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
junit_family = "xunit2"
markers = ["integration: marks tests as integration tests"]
addopts = """
  --junitxml=dist/tests/report.xml
  --html=dist/tests/report.html
  --self-contained-html
  --cov=qsdl
  --cov-report=term
  --cov-report=html:dist/coverage
  -m 'not integration'
"""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "B", "SIM", "I", "ANN"]
ignore = ["E501"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
