[project]
name = "QSDL"
version = "6.3.1"
description = "A Schema-Definition-Language Generator inspired by GraphQl."
readme = "README.md"
authors = [{ name = "henn1001", email = "henn1001@outlook.com" }]
license = "Apache-2.0"
requires-python = ">=3.13"

dependencies = [
  "dacite",
  "flatten-json",
  "inquirer",
  "jinja2",
  "pathspec",
  "plantuml",
  "pyfiglet",
  "pyyaml",
  "stringcase",
  "textx",
  "typer",
]

[dependency-groups]
dev = [
  "openapi-spec-validator",
  "pytest",
  "pytest-cov",
  "pytest-html",
  "pytest-order",
  "ruff",
]

[project.scripts]
qsdl = "qsdl.__main__:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
junit_family = "xunit2"
markers = ["integration: marks tests as integration tests"]
addopts = """
  --junitxml=dist/tests/report.xml
  --html=dist/tests/report.html
  --self-contained-html
  --cov=qsdl
  --cov-report=term
  --cov-report=html:dist/coverage
  -m 'not integration'
"""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "B", "SIM", "I", "ANN"]
ignore = ["E501"]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"