[project]
name = "QSDL"
version = "6.3.1"
description = "A Schema-Definition-Language Generator inspired by GraphQl."
readme = "README.md"
authors = [{ name = "henn1001", email = "henn1001@outlook.com" }]
license = "Apache-2.0"
requires-python = ">=3.13"

dependencies = [
  "dacite==1.9.2",
  "flatten-json==0.1.14",
  "inquirer==3.4.1",
  "jinja2==3.1.6",
  "pathspec==1.1.1",
  "plantuml==0.3.0",
  "pyfiglet==1.0.4",
  "pyyaml==6.0.3",
  "stringcase==1.2.0",
  "textx==4.4.0",
  "typer==0.26.8",
]

[dependency-groups]
dev = [
  "openapi-spec-validator==0.9.0",
  "pytest-cov==7.1.0",
  "pytest-html==4.2.0",
  "pytest-order==1.5.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
]

[project.scripts]
qsdl = "qsdl.__main__:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
junit_family = "xunit2"
markers = ["integration: marks tests as integration tests"]
addopts = """
  --junitxml=dist/tests/report.xml
  --html=dist/tests/report.html
  --self-contained-html
  --cov=qsdl
  --cov-report=term
  --cov-report=html:dist/coverage
  -m 'not integration'
"""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "B", "SIM", "I", "ANN"]
ignore = ["E501"]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"